# mh-salari.ir

./: .gitignore  CNAME  Gemfile  README.md  _config.yml  _config_local.yml  categories.html  fa_archive.html  fa_blog.html  fa_blog.md  home.htm  index.html  index.md  news.md  projects.md  publications.md  style.css  tags.html
_data/: authors.yml
_includes/: footer.html  nav-bar.html
_layouts/: default.html  fa-blog.html  fa-post.html  home.html  news-page.html  news.html  project.html  projects-page.html  publication.html  publications-page.html
_news/: 2024-04-14-conversation-with-prof-duchowski.md  2026-05-22-etra-2026.md  2026-06-11-etra-2026-honourable-mention.md
_plugins/: video.rb
_posts/: 2021-02-01-p-ost.md  2021-02-01-post copy 2.md  2021-02-01-post copy 3.md  2021-02-01-post1.md  2021-02-01-pqwost copy 2.md  2021-02-01-test.md  2021-02-08-post.md  2021-02-09-test-post.md  _draft.md
_posts/C_and_Cpp/: 2021-02-01-post.md
_posts/Linux/: 2018-01-18-ubuntu-essentials.md  2020-05-29-autorun-a-python-script-using-systemd.md
_posts/OpenCV/: 2018-01-31-basic-image-operations--in-opencv.md  _2018-01-31-basic-image-operations--in-opencv.md
_posts/STM32/: 2017-09-05-stm32-id.md
_projects/: OptDisc-Extractor.md  arXiv-squirrel.md  cheshm.md  davat.md  emoji-art .md  emoji-art.md  eye-annotation-tool.md  fenjan.md  fixation-target.md  hafez-fal.md  noghte.md  pyelink-syelink.md  pyetsimul.md  ur3.md  wotw.md  zarafe.md
_publications/: 2023-caravanserai-detection.md  2023-farsi-sms-spam.md  2025-illumination-impact.md  2025-psa-head-mounted.md  2026-how-close-can-you-go.md  2026-pyelink-syelink.md  2026-pyetsimul.md
_sass/components/: fa-fonts.scss  footer.scss  icon.scss  links.scss  nav-bar.scss  navigation.scss  reset.scss  variables.scss
_sass/pages/: categories.scss  fa-blog.scss  fa-post.scss  home.scss  main.scss  news.scss  project.scss  projects-page.scss  publications.scss  tags.scss
_site/: feed.xml  index.html  robots.txt
_site/assets/css/: categories.css  categories.css.map  fa-blog.css  fa-blog.css.map  fa-post.css  fa-post.css.map  home-page.css  home-page.css.map  styles.css  styles.css.map  syntax.css  tags.css  tags.css.map
_site/categories/: index.html
_site/fa_blog/: index.html
_site/p-ost/: index.html
_site/post/: index.html
_site/post-copy/: index.html
_site/post-copy-2/: index.html
_site/post-copy-3/: index.html
_site/post1/: index.html
_site/pqwost-copy-2/: index.html
_site/tags/: index.html
_site/test/: index.html
_site/test-post/: index.html
assets/css/: categories.scss  fa-blog.scss  fa-post.scss  home-page.scss  news-page.scss  news.scss  project.scss  projects-page.scss  publications-page.scss  styles.scss  syntax.css  tags.scss
assets/js/: navigation.js
scripts/: make_thumbnails.py  pyproject.toml
styles/: blog_style.css  fa_archive.css  style.css
